# 5143-Opsys-102

./: .gitignore  README.md
Assignments/: README.md
Assignments/P01/: .history  CMakeLists.txt  Makefile  cmd.cpp  cmd.h  cmdtypes.cpp  cmdtypes.h  colors.cpp  colors.h  command.cpp  command.h  helper.cpp  helper.h  jsonhandler.cpp  jsonhandler.h  ls.h  main.cpp  manager.cpp  manager.h  output  parser.cpp  parser.h  requests.cpp  requests.h  shell
Assignments/P01/private/: test.h
Assignments/P01/public/: test.cpp
Assignments/P01/test/: Makefile  lipsum.txt  lorem.txt  lorem2.txt  shell
